Fixed text alignment on editable div on article writing page on mobile.

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -834,7 +834,6 @@ hr
         top: -100vh;
     }
 }
-
 @keyframes moveBottomDown
 {
     from
@@ -882,6 +881,7 @@ hr
     margin: 2% auto;
     overflow-y: auto;
     font-size: 24px;
+    text-align: left;
 }
 
 #mobBannerInput
